# -variables-economicas

./: .gitignore  DockerFile  Variables economicas.py  airflow.cfg  airflow.db  app_dash.py  data.parquet  fed_dash.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  standalone_admin_password.txt  tests_etl_bcra.py  transformed_data.csv  transformed_data.parquet  variables_economicas.py
.github/workflows/: run-tests.yaml
bd/: carga_historica_dim_fecha.py  dim_fecha.py  dim_variable.py  extract_data_fed_historico.py  fact_table.py  redshift_table.py  valores_variable.py
dags/: dag_objects_with_tasks.py  dag_variables_bcra.py  dag_variables_fed.py  data.parquet  etl_functions.py
scripts/: __init__.py  _init_.py  actualizar_dim_fecha.py  data.parquet  data_fed.csv  extract_data.py  extract_data_bis.py  extract_data_fed.py  limpieza_duplicados.py  load_to_redshift.py  load_to_redshift_fed.py  load_to_redshiftbis.py  transform_data.py  transform_data_fed.py  transformed_data.parquet  transformed_data_fed.csv
tests/: __init__.py  test_carga.py  test_extraccion.py  test_extraccion2.py  test_transformacion.py
